[gd_scene load_steps=3 format=3 uid="uid://bsh0lhgpd2xuh"]

[ext_resource type="Theme" uid="uid://bko0q7gp1hwjp" path="res://assets/themes/dracula.tres" id="1_qltg0"]
[ext_resource type="Script" path="res://core/ui/menu/main-menu/in-game_menu.gd" id="2_7lx20"]

[node name="InGameMenu" type="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme = ExtResource("1_qltg0")
script = ExtResource("2_7lx20")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.384314)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="button_up" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_up"]
